deploy/07_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: openshift-run-once-duration-override-operator
  name: run-once-duration-override-operator
  labels:
    runoncedurationoverride.operator: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      runoncedurationoverride.operator: "true"
  template:
    metadata:
      name: runoncedurationoverride
      annotations:
        openshift.io/required-scc: restricted-v2
      labels:
        runoncedurationoverride.operator: "true"
    spec:
      serviceAccountName: run-once-duration-override-operator
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: tmp
        emptyDir: {}
      containers:
        - name: run-once-duration-override-operator
          terminationMessagePolicy: FallbackToLogsOnError
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
              - ALL
          image: quay.io/jchaloup/run-once-duration-override-operator:4.22.0-0
          imagePullPolicy: Always
          command:
            - /usr/bin/run-once-duration-override-operator
          args:
            - "start"
            - "--namespace=$(OPERAND_NAMESPACE)"
            - "--v=2"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          volumeMounts:
          - name: tmp
            mountPath: "/tmp"
